<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain">


    <TextView
            android:id="@+id/textEditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPhoto"
            style="@style/textStyle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditPhoto">
        <EditText
                android:id="@+id/editPhoto"
                style="@style/editTextStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </HorizontalScrollView>
    <TextView
            android:id="@+id/textEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addName"
            style="@style/textStyle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsv"/>
    <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle1"
            app:layout_constraintTop_toBottomOf="@+id/textEditName"/>
    <TextView
            android:id="@+id/textEditAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addAge"
            style="@style/textStyle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName"/>
    <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle1"
            app:layout_constraintTop_toBottomOf="@+id/textEditAge"/>
    <Button
            android:id="@+id/btnSave"
            android:text="@string/btnSave"
            style="@style/bthSearchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAge"/>
</android.support.constraint.ConstraintLayout>