<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/backgroundMain">
    <ScrollView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FF1100"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <TextView
                    android:text="@string/Austria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/flagWhite"
            >
            </FrameLayout>
            <TextView
                    android:text="@string/Poland"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="vertical"
            >
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="60dp"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/Columbia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="vertical"
            >
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/flagYellow"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/flagBlue"
                >
                </FrameLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/Italy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
            >
                <FrameLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@color/flagGreen"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/Denmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
            >
                <FrameLayout
                        android:layout_width="60dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="60dp"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="60dp"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/Madagascar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
            >
                <FrameLayout
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="60dp"
                        android:background="@color/flagGreen"
                >
                </FrameLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/Thailand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="vertical"
            >
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/flagBlue"
                >
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@color/flagWhite"
                >
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>